# GP2_Milestone1

./: CMakeLists.txt
Project/: CMakeLists.txt  SceneLoader.cpp  SceneLoader.h  SceneLoader.hpp  main.cpp
Project/HelperClasses/: GP23DMesh.cpp  GP23DMesh.h  GP2Camera.cpp  GP2Camera.h  GP2CircleMesh.cpp  GP2CircleMesh.h  GP2CommandBuffer.cpp  GP2CommandBuffer.h  GP2CommandPool.cpp  GP2CommandPool.h  GP2CubeMesh.cpp  GP2CubeMesh.h  GP2DataBuffer.cpp  GP2DataBuffer.h  GP2DescriptorPool.cpp  GP2DescriptorPool.h  GP2Image.cpp  GP2Image.h  GP2Mesh.cpp  GP2Mesh.h  GP2Pipeline.cpp  GP2Pipeline.h  GP2RectangleMesh.cpp  GP2RectangleMesh.h  GP2RoundedRectangleMesh.cpp  GP2RoundedRectangleMesh.h  GP2Scene.cpp  GP2Scene.h  GP2Scene2D.cpp  GP2Scene2D.h  GP2Scene3D.cpp  GP2Scene3D.h  GP2Shader.cpp  GP2Shader.h  GP2SphereMesh.cpp  GP2SphereMesh.h  OBJLoader.h  Vertex.h
Project/labwork/: Week01.cpp  Week02.cpp  Week03.cpp  Week04.cpp  Week05.cpp  Week06.cpp
Project/resources/: characters_Battery.mtl
Project/scenes/: 2DScene.json  3DScene.json  PBRScene.json  UnrealPBRScene.json
Project/shaders/: 3DShader.frag  3DShader.vert  PBRShader.frag  PBRShader.vert  UnrealPBRShader.frag  UnrealPBRShader.vert  shader.vert
Project/vulkanbase/: VulkanBase.h  VulkanUtil.h
